--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@opencensus/exporter-zpages": "^0.0.11",
     "@opencensus/nodejs": "^0.0.11",
@@ -15,12 +18,15 @@
     "pino": "^5.12.2"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "@types/koa": "^2.0.48",
     "@types/koa-pino-logger": "^2.1.4",
     "@types/koa-router": "^7.0.40",
     "@types/koa-views": "^2.0.3",
     "@types/pino": "^5.8.6",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.11",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
